Fix horizontally overflowing shadows on jointsource title

--- a/styles/sass/_explore.scss
+++ b/styles/sass/_explore.scss
@@ -18,7 +18,6 @@ $column-spacing: 8px;
     box-sizing: border-box;
     position: relative;
     margin: $column-spacing / 2;
-    padding: 0 1em;
     width: $column-width - $column-spacing;
     height: $column-width - $column-spacing;
     border-radius: 3px;
@@ -52,8 +51,9 @@ $column-spacing: 8px;
 
     > .jointsource-meta {
       flex: 1 1 auto;
+      padding: 0 1em;
       height: auto;
-      overflow: hidden;
+      overflow-y: hidden;
       @include fade(30%);
 
       h3 {
@@ -68,8 +68,8 @@ $column-spacing: 8px;
     }
 
     > .jointsource-status {
-      height: auto;
-      padding: 0.5em 0 1em;
+      flex: none;
+      padding: 0.5em 1em 1em;
       color: lighten($color-text, 40%);
       text-transform: lowercase;
       opacity: 0;
